crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-dc-simple_inductor_capacitor.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
DcSnapshot {
    results: [
        (
            OpSnapshot {
                voltages: [
                    (
                        "n001",
                        1.0,
                    ),
                    (
                        "n002",
                        0.0,
                    ),
                ],
                currents: [
                    (
                        "L2",
                        0.001,
                    ),
                ],
            },
            0.001,
        ),
        (
            OpSnapshot {
                voltages: [
                    (
                        "n001",
                        2.0,
                    ),
                    (
                        "n002",
                        0.0,
                    ),
                ],
                currents: [
                    (
                        "L2",
                        0.002,
                    ),
                ],
            },
            0.002,
        ),
        (
            OpSnapshot {
                voltages: [
                    (
                        "n001",
                        3.0,
                    ),
                    (
                        "n002",
                        0.0,
                    ),
                ],
                currents: [
                    (
                        "L2",
                        0.003,
                    ),
                ],
            },
            0.003,
        ),
        (
            OpSnapshot {
                voltages: [
                    (
                        "n001",
                        4.0,
                    ),
                    (
                        "n002",
                        0.0,
                    ),
                ],
                currents: [
                    (
                        "L2",
                        0.004,
                    ),
                ],
            },
            0.004,
        ),
        (
            OpSnapshot {
                voltages: [
                    (
                        "n001",
                        5.0,
                    ),
                    (
                        "n002",
                        0.0,
                    ),
                ],
                currents: [
                    (
                        "L2",
                        0.005,
                    ),
                ],
            },
            0.005,
        ),
    ],
}
