crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-dc-simple_resistor.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
[
    [3.0, 2.0], shape=[2], strides=[1], layout=CFcf (0xf), const ndim=1,
    [6.0, 4.0], shape=[2], strides=[1], layout=CFcf (0xf), const ndim=1,
    [9.0, 6.0], shape=[2], strides=[1], layout=CFcf (0xf), const ndim=1,
    [12.0, 8.0], shape=[2], strides=[1], layout=CFcf (0xf), const ndim=1,
    [15.0, 10.0], shape=[2], strides=[1], layout=CFcf (0xf), const ndim=1,
]
