crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-diode_op.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OpSnapshot {
    voltages: [
        (
            "in",
            1.0,
        ),
        (
            "out",
            0.9821917909533268,
        ),
    ],
    currents: [
        (
            "V1",
            -1.7808209046673218e-6,
        ),
    ],
}
