crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-rc_op.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OpSnapshot {
    voltages: [
        (
            "in",
            5.0,
        ),
        (
            "out",
            5.0,
        ),
    ],
    currents: [
        (
            "V1",
            0.0,
        ),
    ],
}
