crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-simple_inductor_capacitor.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OpSnapshot {
    voltages: [
        (
            "n001",
            2.0,
        ),
        (
            "n002",
            0.0,
        ),
    ],
    currents: [
        (
            "L2",
            0.002,
        ),
    ],
}
