crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-simple_resistor.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OpSnapshot {
    voltages: [
        (
            "in",
            3.0,
        ),
        (
            "out",
            1.9999999999999998,
        ),
    ],
    currents: [],
}
