crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-simple_rl_high_pass.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OperatingPointResult {
    voltages: [
        (
            "in",
            0.0,
        ),
        (
            "out",
            0.0,
        ),
    ],
    currents: [
        (
            "V1",
            0.0,
        ),
        (
            "L1",
            0.0,
        ),
    ],
}
