crates/spicy_simulate/src/snapshots/spicy_simulate__tests__simulate-op-simple_voltage_source.snap
---
source: crates/spicy_simulate/src/lib.rs
expression: output
---
OpSnapshot {
    voltages: [
        (
            "in",
            1.0,
        ),
        (
            "out",
            0.6666666666666666,
        ),
    ],
    currents: [
        (
            "V1",
            -0.0003333333333333334,
        ),
    ],
}
